--- a/CourseManagement/src/main/webapp/css/home-style.css
+++ b/CourseManagement/src/main/webapp/css/home-style.css
@@ -14,7 +14,7 @@ body {
 .home-header {
     width: 100%;
     height: 75px;
-    background-color: blue;
+    background: linear-gradient(120deg, #65e0f6 0%, #85a1fd 100%);
     color: white;
     text-align: center;
     display: grid;
@@ -115,7 +115,7 @@ body {
 /* Footer */
 .home-footer {
     width: 100%;
-    background-color: blue;
+    background: linear-gradient(120deg, #65e0f6 0%, #85a1fd 100%);
     color: white;
     padding: 15px 0;
     height: 150px;
