--- a/CourseManagement/src/main/webapp/css/home-style.css
+++ b/CourseManagement/src/main/webapp/css/home-style.css
@@ -95,6 +95,10 @@ body {
 .course-list {
     list-style: none;
     padding: 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .course-list li {
@@ -111,6 +115,8 @@ body {
 .course-list li a:hover {
     color: #0056b3;
 }
+
+
 
 /* Footer */
 .home-footer {
