--- a/CourseManagement/src/main/webapp/css/home-style.css
+++ b/CourseManagement/src/main/webapp/css/home-style.css
@@ -127,6 +127,10 @@ body {
     justify-content: space-between;
 }
 
+.course-card:hover {
+    cursor: pointer;
+}
+
 .card-header {
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     padding-bottom: 10px;
